Fix caption spacing

--- a/styles/student.css
+++ b/styles/student.css
@@ -155,7 +155,7 @@ img {
 
 .sub {
   font-size: 0.8em;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   font-style: italic;
   text-align: center; }
 
